--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 websockets==12.0
 python-multipart==0.0.6
-aiofiles==23.2.1
-groq==0.4.0
-openai==1.3.0
+groq==0.11.0
+python-dotenv==1.0.0
