--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 websockets==12.0
 python-multipart==0.0.6
-groq==0.11.0
+aiofiles==23.2.1
 python-dotenv==1.0.0
